# controllers/team_controller.go
@@ -546,6 +546,103 @@ func UpdateCoachInTeam(c *gin.Context) {
 	c.JSON(http.StatusOK, coach)
 }
 
+type PlayerStats struct {
+	TotalMatch    int `json:"total_match"`
+	TotalMatchWin int `json:"total_match_win"`
+	TotalGame     int `json:"total_game"`
+	TotalGameWin  int `json:"total_game_win"`
+}
+
+// @Summary Get player statistics
+// @Description Get player statistics with the given player ID and tournament ID
+// @Accept  json
+// @Produce  json
+// @Tags Team
+// @Security Bearer
+// @Param playerID path string true "Player ID"
+// @Param tournamentID path string true "Tournament ID"
+// @Success 200 {object} PlayerStats
+// @Failure 400 {string} string "Player ID and Tournament ID are required" or "Invalid Player ID format" or "Invalid Tournament ID format"
+// @Failure 500 {string} string "Internal server error"
+// @Router /players/{playerID}/tournaments/{tournamentID}/player-statistics [get]
+func PlayerStatistics(c *gin.Context) {
+	playerIDStr := c.Param("playerID")
+	tournamentIDStr := c.Param("tournamentID")
+
+	if playerIDStr == "" || tournamentIDStr == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Player ID and Tournament ID are required"})
+		return
+	}
+
+	playerID, err := strconv.ParseUint(playerIDStr, 10, 32)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid Player ID format"})
+		return
+	}
+
+	tournamentID, err := strconv.ParseUint(tournamentIDStr, 10, 32)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid Tournament ID format"})
+		return
+	}
+
+	matchStats := struct {
+		TotalMatch    int `json:"total_match"`
+		TotalMatchWin int `json:"total_match_win"`
+	}{}
+	// Query untuk total_match dan total_match_win
+	matchQuery := `
+		SELECT 
+			COUNT(DISTINCT m.match_id) as total_match,
+			SUM(CASE 
+				WHEN (m.team_a_id = t.team_id AND m.team_a_score > m.team_b_score) OR 
+					 (m.team_b_id = t.team_id AND m.team_b_score > m.team_a_score) 
+				THEN 1 ELSE 0 END) as total_match_win
+		FROM players p
+		JOIN teams t ON p.team_id = t.team_id
+		JOIN player_matches pm ON p.player_id = pm.player_id
+		JOIN match_team_details mtd ON pm.match_team_detail_id = mtd.match_team_detail_id
+		JOIN matches m ON mtd.match_id = m.match_id
+		WHERE p.player_id = ? AND m.tournament_id = ?
+	`
+	if err := config.DB.Raw(matchQuery, playerID, tournamentID).Scan(&matchStats).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error querying match statistics: " + err.Error()})
+		return
+	}
+
+	gameStats := struct {
+		TotalGame    int `json:"total_game"`
+		TotalGameWin int `json:"total_game_win"`
+	}{}
+
+	// Query untuk total_game dan total_game_win
+	gameQuery := `
+		SELECT 
+			COUNT(DISTINCT g.game_id) as total_game,
+			SUM(CASE WHEN g.winner_team_id = t.team_id THEN 1 ELSE 0 END) as total_game_win
+		FROM players p
+		JOIN teams t ON p.team_id = t.team_id
+		JOIN player_matches pm ON p.player_id = pm.player_id
+		JOIN match_team_details mtd ON pm.match_team_detail_id = mtd.match_team_detail_id
+		JOIN matches m ON mtd.match_id = m.match_id
+		JOIN games g ON m.match_id = g.match_id
+		WHERE p.player_id = ? AND m.tournament_id = ?
+	`
+	if err := config.DB.Raw(gameQuery, playerID, tournamentID).Scan(&gameStats).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error querying game statistics: " + err.Error()})
+		return
+	}
+
+	var stats = PlayerStats{
+		TotalMatch:    matchStats.TotalMatch,
+		TotalMatchWin: matchStats.TotalMatchWin,
+		TotalGame:     gameStats.TotalGame,
+		TotalGameWin:  gameStats.TotalGameWin,
+	}
+
+	c.JSON(http.StatusOK, stats)
+}
+
 // @Summary Get all players in a team
 // @Description Get all players in a team with the given team ID
 // @Accept  json
@@ -609,6 +706,100 @@ func GetPlayerByID(c *gin.Context) {
 
 	// Kembalikan data pemain dalam format JSON
 	c.JSON(http.StatusOK, player)
+}
+
+type CoachStats struct {
+	TotalMatch    int `json:"total_match"`
+	TotalMatchWin int `json:"total_match_win"`
+	TotalGame     int `json:"total_game"`
+	TotalGameWin  int `json:"total_game_win"`
+}
+
+// @Summary Get coach statistics
+// @Description Get coach statistics with the given coach ID and tournament ID
+// @Accept  json
+// @Produce  json
+// @Tags Team
+// @Security Bearer
+// @Param coachID path string true "Coach ID"
+// @Param tournamentID path string true "Tournament ID"
+// @Success 200 {object} CoachStats
+// @Failure 400 {string} string "Coach ID and Tournament ID are required"
+// @Failure 404 {string} string "Coach not found"
+// @Failure 500 {string} string "Internal server error"
+// @Router /tournaments/{tournamentID}/coachs/{coachID}/coach-statistics [get]
+func CoachStatistics(c *gin.Context) {
+	coachIDStr := c.Param("coachID")
+	tournamentIDStr := c.Param("tournamentID")
+
+	if coachIDStr == "" || tournamentIDStr == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Coach ID and Tournament ID are required"})
+		return
+	}
+
+	coachID, err := strconv.ParseUint(coachIDStr, 10, 32)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid Coach ID format"})
+		return
+	}
+
+	tournamentID, err := strconv.ParseUint(tournamentIDStr, 10, 32)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid Tournament ID format"})
+		return
+	}
+
+	matchStats := struct {
+		TotalMatch    int `json:"total_match"`
+		TotalMatchWin int `json:"total_match_win"`
+	}{}
+	// Query untuk total_match dan total_match_win
+	matchQuery := `
+		SELECT 
+			COUNT(DISTINCT m.match_id) as total_match,
+			SUM(CASE 
+				WHEN (m.team_a_id = t.team_id AND m.team_a_score > m.team_b_score) OR 
+					 (m.team_b_id = t.team_id AND m.team_b_score > m.team_a_score) 
+				THEN 1 ELSE 0 END) as total_match_win
+		FROM coaches c
+		JOIN teams t ON c.team_id = t.team_id
+		JOIN matches m ON (m.team_a_id = t.team_id OR m.team_b_id = t.team_id)
+		WHERE c.coach_id = ? AND m.tournament_id = ?
+	`
+	if err := config.DB.Raw(matchQuery, coachID, tournamentID).Scan(&matchStats).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error querying match statistics: " + err.Error()})
+		return
+	}
+
+	gameStats := struct {
+		TotalGame    int `json:"total_game"`
+		TotalGameWin int `json:"total_game_win"`
+	}{}
+
+	// Query untuk total_game dan total_game_win
+	gameQuery := `
+		SELECT 
+			COUNT(DISTINCT g.game_id) as total_game,
+			SUM(CASE WHEN g.winner_team_id = t.team_id THEN 1 ELSE 0 END) as total_game_win
+		FROM coaches c
+		JOIN teams t ON c.team_id = t.team_id
+		JOIN matches m ON (m.team_a_id = t.team_id OR m.team_b_id = t.team_id)
+		JOIN games g ON m.match_id = g.match_id
+		WHERE c.coach_id = ? AND m.tournament_id = ?
+	`
+	if err := config.DB.Raw(gameQuery, coachID, tournamentID).Scan(&gameStats).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error querying game statistics: " + err.Error()})
+		return
+	}
+
+	var stats = CoachStats{
+		TotalMatch:    matchStats.TotalMatch,
+		TotalMatchWin: matchStats.TotalMatchWin,
+		TotalGame:     gameStats.TotalGame,
+		TotalGameWin:  gameStats.TotalGameWin,
+	}
+
+	c.JSON(http.StatusOK, stats)
 }
 
 // @Summary Get all coaches in a team
